--- a/ShowReg/output.html
+++ b/ShowReg/output.html
@@ -52,17 +52,17 @@
 	<th style="width: 25%;">Label</th>
 	<th style="width: 10%;">Value</th>
 	<th style="width: 10%;">ValueRaw</th>
-	</tr><tr><td style="width: 5%;">0</td><td style="width: 25%;">System</td><td style="width: 25%;">Physical Memory Used</td><td style="width: 10%;">5,895 MB</td><td style="width: 10%;">5895</td></tr>
-<tr><td style="width: 5%;">1</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600</td><td style="width: 25%;">Total CPU Usage</td><td style="width: 10%;">5.6 %</td><td style="width: 10%;">5.6</td></tr>
-<tr><td style="width: 5%;">2</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600</td><td style="width: 25%;">Core Clocks</td><td style="width: 10%;">4,007 MHz</td><td style="width: 10%;">4007</td></tr>
-<tr><td style="width: 5%;">3</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600: Enhanced</td><td style="width: 25%;">CPU (Tctl/Tdie)</td><td style="width: 10%;">45.5 °C</td><td style="width: 10%;">45.5</td></tr>
-<tr><td style="width: 5%;">4</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600: Enhanced</td><td style="width: 25%;">CPU Package Power</td><td style="width: 10%;">28.718 W</td><td style="width: 10%;">28.718</td></tr>
-<tr><td style="width: 5%;">5</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Temperature</td><td style="width: 10%;">39 °C</td><td style="width: 10%;">39</td></tr>
-<tr><td style="width: 5%;">6</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Hot Spot Temperature</td><td style="width: 10%;">42 °C</td><td style="width: 10%;">42</td></tr>
+	</tr><tr><td style="width: 5%;">0</td><td style="width: 25%;">System</td><td style="width: 25%;">Physical Memory Used</td><td style="width: 10%;">6,890 MB</td><td style="width: 10%;">6890</td></tr>
+<tr><td style="width: 5%;">1</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600</td><td style="width: 25%;">Average Effective Clock</td><td style="width: 10%;">155 MHz</td><td style="width: 10%;">155</td></tr>
+<tr><td style="width: 5%;">2</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600</td><td style="width: 25%;">Total CPU Usage</td><td style="width: 10%;">1.4 %</td><td style="width: 10%;">1.4</td></tr>
+<tr><td style="width: 5%;">3</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600: Enhanced</td><td style="width: 25%;">CPU (Tctl/Tdie)</td><td style="width: 10%;">47 °C</td><td style="width: 10%;">47</td></tr>
+<tr><td style="width: 5%;">4</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600: Enhanced</td><td style="width: 25%;">CPU Package Power</td><td style="width: 10%;">27 W</td><td style="width: 10%;">27</td></tr>
+<tr><td style="width: 5%;">5</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Temperature</td><td style="width: 10%;">42 °C</td><td style="width: 10%;">42</td></tr>
+<tr><td style="width: 5%;">6</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Hot Spot Temperature</td><td style="width: 10%;">44 °C</td><td style="width: 10%;">44</td></tr>
 <tr><td style="width: 5%;">7</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Fan</td><td style="width: 10%;">0 RPM</td><td style="width: 10%;">0</td></tr>
-<tr><td style="width: 5%;">8</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">TGP Power</td><td style="width: 10%;">9 W</td><td style="width: 10%;">9</td></tr>
-<tr><td style="width: 5%;">9</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Clock</td><td style="width: 10%;">36 MHz</td><td style="width: 10%;">36</td></tr>
-<tr><td style="width: 5%;">10</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Memory Clock</td><td style="width: 10%;">134 MHz</td><td style="width: 10%;">134</td></tr>
-<tr><td style="width: 5%;">11</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Utilization</td><td style="width: 10%;">3 %</td><td style="width: 10%;">3</td></tr>
-<tr><td style="width: 5%;">12</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Memory Usage</td><td style="width: 10%;">1,420 MB</td><td style="width: 10%;">1420</td></tr>
+<tr><td style="width: 5%;">8</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">TGP Power</td><td style="width: 10%;">8 W</td><td style="width: 10%;">8</td></tr>
+<tr><td style="width: 5%;">9</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Clock</td><td style="width: 10%;">4 MHz</td><td style="width: 10%;">4</td></tr>
+<tr><td style="width: 5%;">11</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Utilization</td><td style="width: 10%;">0 %</td><td style="width: 10%;">0</td></tr>
+<tr><td style="width: 5%;">12</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Memory Usage</td><td style="width: 10%;">1,849 MB</td><td style="width: 10%;">1849</td></tr>
+<tr><td style="width: 5%;">10</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Memory Clock</td><td style="width: 10%;">44 MHz</td><td style="width: 10%;">44</td></tr>
 </table><br></div></body></html>
