--- a/ShowReg/output.html
+++ b/ShowReg/output.html
@@ -52,22 +52,4 @@
 	<th style="width: 25%;">Label</th>
 	<th style="width: 10%;">Value</th>
 	<th style="width: 10%;">ValueRaw</th>
-	</tr><tr><td style="width: 5%;">0</td><td style="width: 25%;">System</td><td style="width: 25%;">Physical Memory Used</td><td style="width: 10%;">6,254 MB</td><td style="width: 10%;">6254</td></tr>
-<tr><td style="width: 5%;">1</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600</td><td style="width: 25%;">Average Effective Clock</td><td style="width: 10%;">152 MHz</td><td style="width: 10%;">152</td></tr>
-<tr><td style="width: 5%;">2</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600</td><td style="width: 25%;">Total CPU Usage</td><td style="width: 10%;">0.8 %</td><td style="width: 10%;">0.8</td></tr>
-<tr><td style="width: 5%;">3</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600: Enhanced</td><td style="width: 25%;">CPU (Tctl/Tdie)</td><td style="width: 10%;">46 °C</td><td style="width: 10%;">46</td></tr>
-<tr><td style="width: 5%;">4</td><td style="width: 25%;">CPU [#0]: AMD Ryzen 5 3600: Enhanced</td><td style="width: 25%;">CPU Package Power</td><td style="width: 10%;">27 W</td><td style="width: 10%;">27</td></tr>
-<tr><td style="width: 5%;">5</td><td style="width: 25%;">ASRock B450 Steel Legend (Nuvoton NCT6779D)</td><td style="width: 25%;">Chassis1</td><td style="width: 10%;">1,004 RPM</td><td style="width: 10%;">1004</td></tr>
-<tr><td style="width: 5%;">6</td><td style="width: 25%;">ASRock B450 Steel Legend (Nuvoton NCT6779D)</td><td style="width: 25%;">CPU1</td><td style="width: 10%;">843 RPM</td><td style="width: 10%;">843</td></tr>
-<tr><td style="width: 5%;">7</td><td style="width: 25%;">ASRock B450 Steel Legend (Nuvoton NCT6779D)</td><td style="width: 25%;">WP</td><td style="width: 10%;">1,120 RPM</td><td style="width: 10%;">1120</td></tr>
-<tr><td style="width: 5%;">8</td><td style="width: 25%;">ASRock B450 Steel Legend (Nuvoton NCT6779D)</td><td style="width: 25%;">Chassis2</td><td style="width: 10%;">962 RPM</td><td style="width: 10%;">962</td></tr>
-<tr><td style="width: 5%;">9</td><td style="width: 25%;">ASRock B450 Steel Legend (Nuvoton NCT6779D)</td><td style="width: 25%;">Chassis3</td><td style="width: 10%;">1,015 RPM</td><td style="width: 10%;">1015</td></tr>
-<tr><td style="width: 5%;">11</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Hot Spot Temperature</td><td style="width: 10%;">43 °C</td><td style="width: 10%;">43</td></tr>
-<tr><td style="width: 5%;">12</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Fan</td><td style="width: 10%;">0 RPM</td><td style="width: 10%;">0</td></tr>
-<tr><td style="width: 5%;">10</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Temperature</td><td style="width: 10%;">41 °C</td><td style="width: 10%;">41</td></tr>
-<tr><td style="width: 5%;">13</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">TGP Power</td><td style="width: 10%;">8 W</td><td style="width: 10%;">8</td></tr>
-<tr><td style="width: 5%;">14</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Clock</td><td style="width: 10%;">19 MHz</td><td style="width: 10%;">19</td></tr>
-<tr><td style="width: 5%;">15</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Memory Clock</td><td style="width: 10%;">92 MHz</td><td style="width: 10%;">92</td></tr>
-<tr><td style="width: 5%;">16</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU Utilization</td><td style="width: 10%;">0 %</td><td style="width: 10%;">0</td></tr>
-<tr><td style="width: 5%;">17</td><td style="width: 25%;">GPU [#0]: AMD Radeon RX 6750 XT: </td><td style="width: 25%;">GPU D3D Memory Dedicated</td><td style="width: 10%;">545 MB</td><td style="width: 10%;">545</td></tr>
-</table><br></div></body></html>
+	</tr></table><br></div></body></html>
